<resources>
    <string name="app_name">TheMovieBookingApp</string>
    <string name="lbl_welcome">Welcome!</string>
    <string name="lbl_hello_welcome_to_galaxy_app">Hello! Welcome to Galaxy App.</string>
    <string name="lbl_get_started">Get Started</string>
    <string name="lbl_welcome_back_login_to_continue">Welcome back, login to continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_sign_in_with_google">Sign in with google</string>
    <string name="lbl_sign_in_with_facebook">Sign in with facebook</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_plot_summary_desc">After the demise of his father, Tim travels to Ryme city where he runs into his father\'s Pokemon partner, Pikachu. They team up and try to work on the case left unfinished by Tim\'s father.</string>
    <string name="lbl_plot_summary">Plot Summary</string>
    <string name="lbl_sub_total_40">Sub total: 40$</string>
    <string name="lbl_payment_method">Payment method</string>
    <string name="lbl_credit_card">Credit card</string>
    <string name="lbl_visa_master_card_jcb">Visa master card JCB</string>
    <string name="lbl_minus">-</string>
    <string name="lbl_plus">+</string>
    <string name="lbl_combo_set_m">Combo set M</string>
    <string name="lbl_payment_desc">Combo size M 22oz. Coke(X1) and medium popcorn (X1)</string>
    <string name="lbl_price">18$</string>
    <string name="lbl_qty">0</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_price_voucher_title">Price</string>
    <string name="lbl_seats">Seats</string>
    <string name="lbl_row">Row</string>
    <string name="lbl_screen">Screen</string>
    <string name="lbl_theater">Theater</string>
    <string name="lbl_show_time_date">Show time - Date</string>
    <string name="lbl_booking_no">Booking no</string>
    <string name="lbl_awesome">Awesome!</string>
    <string name="lbl_sign_in">Sign in</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_add_new_card">Add New Card</string>
    <string name="lbl_card_number">Card number</string>
    <string name="lbl_card_holder">Card holder</string>
    <string name="lbl_expiration_date">Expiration date</string>
    <string name="lbl_cvc">CVC</string>
    <string name="lbl_payment_amount">Payment amount</string>
    <string name="lbl_amount">$ 926.21</string>
    <string name="lbl_visa">VISA</string>
    <string name="lbl_three_digit">* * *</string>
    <string name="lbl_four_digit">* * * *   * * * *    * * * *    * * * *</string>
    <string name="lbl_card_holder_title">CARD HOLDER</string>
    <string name="lbl_expires">EXPIRES</string>
    <string name="lbl_get_your_ticket">Get your ticket</string>
    <string name="lbl_cast">Cast</string>
    <string name="lbl_enter_promo_code">Enter promo code</string>
    <string name="lbl_don_t_have_any_promo_code">Don\'t have any promo code?</string>
    <string name="lbl_get_it_now">Get it now</string>
    <string name="lbl_this_is_your_ticket">This is your ticket.</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="lbl_phone">Phone</string>

    <string name="lbl_open">Open</string>
    <string name="lbl_close">Close</string>
    <string name="lbl_promotion_code">Promotion Code</string>
    <string name="lbl_select_a_language">Select a language</string>
    <string name="lbl_term_of_services">Term Of Services</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_rate_us">Rate Us</string>
    <string name="lbl_log_out">Log out</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_seating_plan_seats">Seats</string>
    <string name="lbl_seating_plan_tickets">Tickets</string>
    <string name="lbl_seating_plan_available">Available</string>
    <string name="lbl_seating_plan_reserved">Reserved</string>
    <string name="lbl_seating_plan_your_selection">Your Selection</string>
    <string name="lbl_now_showing">Now Showing</string>
    <string name="lbl_coming_soon">Coming Soon</string>
    <string name="lbl_hi_lily">Hi Lily!</string>
    <string name="lbl_lily_johnson">Lily Johnson</string>
    <string name="lbl_lily_johnson_gmail_com">LilyJohnson@gmail.com</string>
    <string name="lbl_detective_pikachu">Detective Pikachu</string>
    <string name="lbl_galaxy_cinema_golden_city">Galaxy Cinema-Golden City</string>
    <string name="lbl_wednesday_10_may_07_00_pm">Wednesday,10 May,07:00 PM</string>
    <string name="lbl_2">2</string>
    <string name="lbl_d_row_5_6">D Row/ 5,6</string>
    <string name="lbl_buy_ticket_for_20_00">Buy Ticket for $20.00</string>
    <string name="txt_booking_time_error">Please Choose the movie booking time</string>

    <string name="txt_buy_ticket">Buy Ticket for $ %1$s</string>
    <string name="txt_snack_amount"> $ %1$s</string>
    <string name="txt_pay_amount">Pay $ %1$s</string>
    <string name="txt_sub_total_pay_amount">Sub total: $ %1$s</string>

</resources>