<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal">

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:textColor="@color/blackLight4"
                android:id="@+id/tvSnackTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                tools:text="@string/lbl_combo_set_m"
                android:textSize="@dimen/text_regular"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSnackDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                tools:text="@string/lbl_payment_desc"
                android:textColor="@color/whiteDark9"
                android:textSize="@dimen/text_smaller" />

        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSnackPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_medium"
                android:gravity="center"
                tools:text="@string/lbl_price"
                android:textColor="@color/blackLight3"
                android:textSize="@dimen/text_regular"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/llQtyPlusMinus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/btnMinus"
                    android:layout_width="@dimen/width_btn_minus"
                    android:layout_height="@dimen/height_btn_minus"
                    android:background="@drawable/background_minus_button"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:textColor="@color/blackLight4"
                        android:textSize="@dimen/text_small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_minus" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnQty"
                    android:layout_width="@dimen/width_qty"
                    android:layout_height="@dimen/height_qty"
                    android:background="@drawable/background_number_textbox"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvQty"
                        android:textColor="@color/blackLight4"
                        android:textSize="@dimen/text_small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_qty" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnPlus"
                    android:layout_width="@dimen/width_btn_plus"
                    android:layout_height="@dimen/height_btn_plus"
                    android:background="@drawable/background_plus_button"
                    android:gravity="center">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:textColor="@color/blackLight4"
                        android:textSize="@dimen/text_small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lbl_plus" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
