<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivMovieFilm"
        android:layout_width="@dimen/width_get_started_img_view"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:src="@drawable/pic_welcome" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/lbl_welcome"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_regular_3x"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/lbl_hello_welcome_to_galaxy_app"
                android:textColor="#FBE9E7"
                android:textSize="@dimen/text_regular" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGetStarted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/margin_medium_2"
            android:background="@drawable/background_get_started_button"
            android:text="@string/lbl_get_started"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_regular_2x"
            app:strokeColor="@android:color/darker_gray" />

    </RelativeLayout>
</LinearLayout>


