<?xml version="1.0" encoding="utf-8"?>
<com.padcmyanmar.ttm.themoviebookingapp.viewpods.LogInSingInButtonViewPod xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/btnFacebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_login_sign_in_fb_google_button"
        android:elevation="@dimen/margin_small"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/margin_card_medium">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/width_fb_image_view"
            android:layout_height="@dimen/height_fb_image_view"
            android:padding="@dimen/margin_small"
            android:src="@drawable/ic_facebook" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lbl_sign_in_with_facebook"
            android:textColor="@android:color/darker_gray" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnGoogle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:background="@drawable/background_login_sign_in_fb_google_button"
        android:drawableStart="@drawable/ic_google"
        android:elevation="@dimen/margin_small"
        android:gravity="center"

        android:orientation="horizontal"
        android:padding="@dimen/margin_card_medium">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/width_google_image_view"
            android:layout_height="@dimen/height_google_image_view"
            android:padding="@dimen/margin_small"
            android:src="@drawable/ic_google" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/lbl_sign_in_with_google"
            android:textColor="@android:color/darker_gray" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:background="@drawable/background_login_sign_in_confirm_button"
        android:text="@string/lbl_confirm"
        android:textAllCaps="false"
        android:textColor="@android:color/white" />

</com.padcmyanmar.ttm.themoviebookingapp.viewpods.LogInSingInButtonViewPod>